@@ -807,18 +807,17 @@ str ALGtsort(bat *result, const bat *bid);
 str ALGtsort_rev(bat *result, const bat *bid);
 str ALGvariance(dbl *res, const bat *bid);
 str ALGvariancep(dbl *res, const bat *bid);
-str AUTHaddUser(oid *ret, Client *c, str *user, str *pass);
-str AUTHchangePassword(Client *c, str *oldpass, str *passwd);
-str AUTHchangeUsername(Client *c, str *olduser, str *newuser);
-str AUTHcheckCredentials(oid *ret, Client *c, str *user, str *passwd, str *challenge, str *algo);
-str AUTHgetPasswordHash(str *ret, Client *c, str *username);
-str AUTHgetUsername(str *ret, Client *c);
-str AUTHgetUsers(BAT **ret, Client *c);
+str AUTHaddUser(oid *ret, Client c, str *user, str *pass);
+str AUTHchangePassword(Client c, str *oldpass, str *passwd);
+str AUTHchangeUsername(Client c, str *olduser, str *newuser);
+str AUTHcheckCredentials(oid *ret, Client c, str *user, str *passwd, str *challenge, str *algo);
+str AUTHgetPasswordHash(str *ret, Client c, str *username);
+str AUTHgetUsername(str *ret, Client c);
+str AUTHgetUsers(BAT **ret1, BAT **ret2, Client c);
 str AUTHinitTables(str *passwd);
-str AUTHremoveUser(Client *c, str *username);
-str AUTHrequireAdmin(Client *c);
+str AUTHremoveUser(Client c, str *username);
 str AUTHresolveUser(str *ret, oid *uid);
-str AUTHsetPassword(Client *c, str *username, str *passwd);
+str AUTHsetPassword(Client c, str *username, str *passwd);
 str AUTHunlockVault(str *password);
 str BATPCREilike(bat *ret, const bat *b, const str *pat, const str *esc);
 str BATPCREilike2(bat *ret, const bat *b, const str *pat);
