@@ -16,15 +16,15 @@ exit MALException;
 	io.print(id);
 
 	# do a simple listing of users known
-	u := clients.getUsers();
-	io.print(u);
+	(u,n) := clients.getUsers();
+	io.print(u,n);
 
 	# should work, we're the admin here
 	clients.removeUser("checkpoint");
 
 	# do a simple listing of users known
-	u := clients.getUsers();
-	io.print(u);
+	(u,n) := clients.getUsers();
+	io.print(u,n);
 
 	# forcefully set the password of the user test
 	clients.setPassword("test", pw);
